--- a/style.css
+++ b/style.css
@@ -19,62 +19,49 @@ body {
   background-image: url(./assets/yannis-papanastasopoulos-yWF2LLan-_o-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  height:auto;
+  height:100vh;
   width:100%;
   color:#ffffff;
   text-align: center;
   font-family: sans-serif;
 }
-
 h1 {
   font-size:4rem;
+  padding: 35px 0px;
 }
-
 h3 {
   color:#ffb403;
-}
-
-.first-question, .second-question , .third-question {
-    position:absolute;
-    top:250px;
-    left:500px;
-    z-index:1;
-    
+  margin-bottom: 50px;
+  text-transform: uppercase;
 }
 button {
-   padding:10px;
-   border-radius: 5px;
-   margin-bottom: 5px;
-   display: block;
+  padding:10px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  display: block;
   width: 100%;
   border: none;
   font-size: 16px;
   cursor: pointer;
   text-align: center;
   background-color: #ffb403;
-
 }
-
 h2 {
-    margin-bottom:10px;
+  margin-bottom:10px;
 }
-
-div button {
-    width:400px;
+button {
+    width: 80%;
+    margin-left: 10%;
+    overflow: hidden;
 }
-
 .second-question, .third-question, .first-question {
   display:none;
 }
-
 .show {
   display:block;
 }
-
 .flex {
   display:flex;
   flex-direction: column;
   align-items: center;
-  
 }
-
