--- a/style.css
+++ b/style.css
@@ -65,3 +65,16 @@ button {
   flex-direction: column;
   align-items: center;
 }
+
+@media (max-width:350px){
+  h1 {
+  font-size: 3rem;
+}
+body {
+  font-size: 12px;
+}
+button {
+  font-size: 14px;
+}
+ 
+}
